# hanzi-sort

./: .gitattributes  .gitignore  .gitmodules  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.crates.md  README.md  build.rs  flake.nix  justfile
.github/workflows/: ci.yml  homebrew-tap.yml  publish-crate.yml  release.yml
benches/: common.rs  format.rs  icu_compare.rs  sort.rs
data/: jyutping.csv  pinyin.csv  radical.csv  strokes.csv  zhuyin.csv
scripts/: convert_jyutping_to_csv.py  convert_pinyin_to_csv.py  convert_pinyin_to_zhuyin.py  convert_radical_to_csv.py  convert_strokes_to_csv.py  update_homebrew_formula.py
src/: app.rs  args.rs  collator.rs  config.rs  error.rs  format.rs  input.rs  lib.rs  main.rs  name.rs  override.rs  pinyin.rs  sort.rs  stroke.rs
src/jyutping/: key.rs  lookup.rs  mod.rs  model.rs
src/pinyin/: collator.rs  context.rs  key.rs  lookup.rs  mod.rs  model.rs
src/radical/: mod.rs
src/zhuyin/: mod.rs
tests/: cli.rs
