[package]
name = "pinyin-sort"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Acture <acturea@gmail.com>"]
readme = "README.md"
description = "A tool to sort pinyin"
documentation = "https://github.com/acture/pinyin-sort"
homepage = "https://github.com/acture/pinyin-sort"
repository = "https://github.com/acture/pinyin-sort"

[dependencies]
clap = { version = "4.5.39", features = ["default", "derive", "env"] }
derive_builder = { version = "0.20.2", features = ["default", "clippy"] }
phf = { version = "0.12.1", features = ["default"] }
serde = { version = "1.0.219", features = ["default", "derive", "std", "alloc", "rc"] }
toml = { version = "0.9.5", features = ["default"] }
lazy_static = "1.5.0"

[build-dependencies]
phf_codegen = "0.11.3"
csv = "1.3.1"
