[package]
name = "hanzi-sort"
version = "0.1.1"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Acture <acturea@gmail.com>"]
readme = "README.md"
description = "A CLI for sorting Chinese text by pinyin or stroke count"
documentation = "https://github.com/Acture/hanzi-sort"
homepage = "https://github.com/Acture/hanzi-sort"
repository = "https://github.com/Acture/hanzi-sort"

[dependencies]
clap = { version = "4.5.39", features = ["default", "derive", "env"] }
phf = { version = "0.12.1", features = ["default"] }
serde = { version = "1.0.219", features = ["derive"] }
smallvec = "1.13.2"
toml = { version = "0.9.5", features = ["default"] }
unicode-width = "0.2.0"

[build-dependencies]
phf_codegen = "0.11.3"
csv = "1.3.1"
