[package]
name = "hanzi-sort"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
authors = ["Acture <acturea@gmail.com>"]
readme = "README.crates.md"
description = "Sort Chinese text by pinyin or stroke count, with polyphonic overrides and terminal-friendly output"
documentation = "https://docs.rs/hanzi-sort"
homepage = "https://github.com/Acture/hanzi-sort"
repository = "https://github.com/Acture/hanzi-sort"
keywords = ["hanzi", "pinyin", "sorting", "cli", "strokes"]
categories = ["command-line-utilities", "text-processing"]

[features]
default = ["collator-pinyin", "collator-strokes"]
collator-pinyin = []
collator-strokes = []
collator-jyutping = []
collator-zhuyin = []
collator-radical = []

[dependencies]
clap = { version = "4.5.39", features = ["default", "derive", "env"] }
clap_complete = "4.5"
phf = { version = "0.12.1", features = ["default"] }
serde = { version = "1.0.219", features = ["derive"] }
smallvec = "1.13.2"
toml = { version = "0.9.5", features = ["default"] }
unicode-width = "0.2.0"

[build-dependencies]
phf_codegen = "0.11.3"
csv = "1.3.1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }
proptest = "1.5"

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "format"
harness = false
